test/lambda/negative/runtime/test_type_error.ls
// Test type mismatch runtime error
let list = [1, 2, 3];
let str = "hello";
list + str
